# chavinha-mini-search-engine

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  ORIGINAL_REQUIREMENTS.md  README.md  cloud_performance_results.json  deploy_cloud.sh  deploy_vespa.sh  docker-compose.yml  pyproject.toml  run_vespa.sh  test_cloud_api.py  test_performance.py
api/: main.py
api/templates/: index.html  stats.html
config/vespa/: services.xml
config/vespa/schemas/: doc.sd
crawler/: ARCHITECTURE.md  README.md  all_domains.txt  create_state_summary.py  doc_scraper.py  test_domains.txt  web_monitor.py
crawler/templates/: dashboard.html
indexer/: chunker.py  indexer.py
tests/: conftest.py
tests/integration/: test_search_workflows.py
tests/unit/api/: test_embedding_generation.py
tests/unit/indexer/: test_chunker.py
